# graphics-mineclone

./: CMakeLists.txt  README  README.md  makefile
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: cube.fs  cube.gs  cube.vs  noise.glsl  perlin.glsl  skybox.fs  skybox.vs  test.fs  test.vs  texquad.fs  texquad.vs  water.fs
src/: block.h  cubes.h  game.cpp  game.h  hashes.h  main.cpp  minecraft.cpp  noise.h  texquad.h  util.h  world.h
src/gfx/: program.h  rendertexture.h  vao.h  vbo.h
